--- a/myenv/pyvenv.cfg
+++ b/myenv/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Program Files\Python312
 include-system-site-packages = false
 version = 3.12.0
-executable = C:\Program Files\Python312\python.exe
-command = C:\Program Files\Python312\python.exe -m venv D:\ML_project1\myenv
+executable = D:\ML_project1\myenv\Scripts\python.exe
+command = D:\ML_project1\myenv\Scripts\python.exe -m venv D:\ML_project1\myenv
